Fix: Use absolute paths for video and 3D model files

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
                 </h2>
                 <div class="video-container">
                     <video controls preload="metadata">
-                        <source src="public/rumah-penghulu-abu-seman-3d.mp4" type="video/mp4">
+                        <source src="/rumah-penghulu-abu-seman-3d.mp4" type="video/mp4">
                         <span data-translate="video-error">Your browser does not support the video tag.</span>
                     </video>
                 </div>
@@ -158,7 +158,7 @@
             <h2 data-translate="modal-model-title">Pillar Carving Motif - 3D Model</h2>
             <div class="model-viewer-container">
                 <model-viewer
-                    src="public/pillar_3D_model.glb"
+                    src="/pillar_3D_model.glb"
                     alt="A 3D model of the Pillar Carving Motif"
                     camera-controls
                     auto-rotate
